tests/baselines/reference/forStatementsMultipleInvalidDecl.errors.txt
forStatementsMultipleInvalidDecl.ts(32,10): error TS2403: Subsequent variable declarations must have the same type.  Variable 'a' must be of type 'any', but here has type 'number'.
forStatementsMultipleInvalidDecl.ts(33,10): error TS2403: Subsequent variable declarations must have the same type.  Variable 'a' must be of type 'any', but here has type 'string'.
forStatementsMultipleInvalidDecl.ts(34,10): error TS2403: Subsequent variable declarations must have the same type.  Variable 'a' must be of type 'any', but here has type 'C'.
forStatementsMultipleInvalidDecl.ts(35,10): error TS2403: Subsequent variable declarations must have the same type.  Variable 'a' must be of type 'any', but here has type 'D<string>'.
forStatementsMultipleInvalidDecl.ts(36,10): error TS2403: Subsequent variable declarations must have the same type.  Variable 'a' must be of type 'any', but here has type 'typeof M'.
forStatementsMultipleInvalidDecl.ts(39,10): error TS2403: Subsequent variable declarations must have the same type.  Variable 'b' must be of type 'I', but here has type 'C'.
forStatementsMultipleInvalidDecl.ts(40,10): error TS2403: Subsequent variable declarations must have the same type.  Variable 'b' must be of type 'I', but here has type 'C2'.
forStatementsMultipleInvalidDecl.ts(43,10): error TS2403: Subsequent variable declarations must have the same type.  Variable 'f' must be of type '(x: string) => number', but here has type '(x: number) => string'.
forStatementsMultipleInvalidDecl.ts(46,10): error TS2403: Subsequent variable declarations must have the same type.  Variable 'arr' must be of type 'string[]', but here has type 'number[]'.
forStatementsMultipleInvalidDecl.ts(47,10): error TS2403: Subsequent variable declarations must have the same type.  Variable 'arr' must be of type 'string[]', but here has type '(C | D<string>)[]'.
forStatementsMultipleInvalidDecl.ts(50,10): error TS2403: Subsequent variable declarations must have the same type.  Variable 'arr2' must be of type 'D<string>[]', but here has type 'D<number>[]'.
forStatementsMultipleInvalidDecl.ts(53,10): error TS2403: Subsequent variable declarations must have the same type.  Variable 'm' must be of type 'typeof M', but here has type 'typeof A'.


==== forStatementsMultipleInvalidDecl.ts (12 errors) ====
    interface I {
        id: number;
    }
    
    class C implements I {
        id: number;
        valid: boolean;
    }
    
    class C2 extends C {
        name: string;
    }
    
    class D<T>{
        source: T;
        recurse: D<T>;
        wrapped: D<D<T>>
    }
    
    function F(x: string): number { return 42; }
    
    module M {
        export class A {
            name: string;
        }
    
        export function F2(x: number): string { return x.toString(); }
    }
    
    // all of these are errors
    for( var a: any;;){}
    for( var a = 1;;){}
             ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'a' must be of type 'any', but here has type 'number'.
!!! related TS6203 forStatementsMultipleInvalidDecl.ts:31:10: 'a' was also declared here.
    for( var a = 'a string';;){}
             ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'a' must be of type 'any', but here has type 'string'.
!!! related TS6203 forStatementsMultipleInvalidDecl.ts:31:10: 'a' was also declared here.
    for( var a = new C();;){}
             ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'a' must be of type 'any', but here has type 'C'.
!!! related TS6203 forStatementsMultipleInvalidDecl.ts:31:10: 'a' was also declared here.
    for( var a = new D<string>();;){}
             ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'a' must be of type 'any', but here has type 'D<string>'.
!!! related TS6203 forStatementsMultipleInvalidDecl.ts:31:10: 'a' was also declared here.
    for( var a = M;;){}
             ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'a' must be of type 'any', but here has type 'typeof M'.
!!! related TS6203 forStatementsMultipleInvalidDecl.ts:31:10: 'a' was also declared here.
    
    for( var b: I;;){}
    for( var b = new C();;){}
             ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'b' must be of type 'I', but here has type 'C'.
!!! related TS6203 forStatementsMultipleInvalidDecl.ts:38:10: 'b' was also declared here.
    for( var b = new C2();;){}
             ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'b' must be of type 'I', but here has type 'C2'.
!!! related TS6203 forStatementsMultipleInvalidDecl.ts:38:10: 'b' was also declared here.
    
    for(var f = F;;){}
    for( var f = (x: number) => '';;){}
             ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'f' must be of type '(x: string) => number', but here has type '(x: number) => string'.
!!! related TS6203 forStatementsMultipleInvalidDecl.ts:42:9: 'f' was also declared here.
    
    for(var arr: string[];;){}
    for( var arr = [1, 2, 3, 4];;){}
             ~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'arr' must be of type 'string[]', but here has type 'number[]'.
!!! related TS6203 forStatementsMultipleInvalidDecl.ts:45:9: 'arr' was also declared here.
    for( var arr = [new C(), new C2(), new D<string>()];;){}
             ~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'arr' must be of type 'string[]', but here has type '(C | D<string>)[]'.
!!! related TS6203 forStatementsMultipleInvalidDecl.ts:45:9: 'arr' was also declared here.
    
    for(var arr2 = [new D<string>()];;){}
    for( var arr2 = new Array<D<number>>();;){}
             ~~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'arr2' must be of type 'D<string>[]', but here has type 'D<number>[]'.
!!! related TS6203 forStatementsMultipleInvalidDecl.ts:49:9: 'arr2' was also declared here.
    
    for(var m: typeof M;;){}
    for( var m = M.A;;){}
             ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'm' must be of type 'typeof M', but here has type 'typeof A'.
!!! related TS6203 forStatementsMultipleInvalidDecl.ts:52:9: 'm' was also declared here.